# tapio

./: .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  WORKFLOW.md  mise.toml  mypy.ini  pyproject.toml  pyrefly.toml  pytest.ini
.claude/commands/: backlog.md  create-issue.md
.claude/skills/backlog/: SKILL.md
.claude/skills/create-issue/: SKILL.md
.claude/skills/create-issue/references/: issue-schema.yaml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/actions/setup-env/: action.yaml
.github/workflows/: ci.yaml  comment-on-pr.yml
docs/: issue-schema.yaml
tapio/: app.py  cli.py  factories.py
tapio/config/: config_manager.py  config_models.py  site_configs.yaml
tapio/crawler/: __init__.py  client.py  crawler.py  runner.py
tapio/models/: __init__.py  document.py
tapio/parser/: __init__.py  parser.py
tapio/prompts/: __init__.py  prompt_loader.py
tapio/services/: __init__.py  document_retrieval_service.py  llm_service.py  rag_orchestrator.py
tapio/tools/: __init__.py  datetime_tool.py
tapio/utils/: __init__.py  embedding_utils.py  markdown_utils.py  text_utils.py
tapio/vectorstore/: chroma_store.py  vectorizer.py
tests/: test_cli.py  test_gradio_app.py
tests/config/: test_config_manager.py
tests/crawler/: test_crawler.py
tests/integration/: test_rag_pipeline.py
tests/parser/: test_parser.py  test_relative_links.py
tests/prompts/: test_prompt_loader.py
tests/services/: test_document_retrieval_service.py  test_llm_service.py
tests/tools/: test_datetime_tool.py
tests/utils/: test_markdown_utils.py  test_text_utils.py
tests/vectorstore/: test_chroma_store.py  test_vectorizer.py
